@@ -2,7 +2,7 @@
 
 Merge *rqda from different coders
 
-inter-coder reliability 
+inter-coder reliability (Can do re-coding which is store in "coding2". only mark, unmark and edit file can take care of the second coidng now.)
 
 support Image file.
 
