@@ -2,6 +2,7 @@
 	* add codingTable argument to markRange, retrieval,ExportCoding, ClickHandlerFun, HL_CodingWithMemo, HL_AllCodings,CodeWithCoding.
 	* upgrade RQDATables to version 0.2.0.
 	* mark, unmark,coding buttons, click handler of codes and ViewFileFun take care of different coding tables.
+	* "Editing file" updates coding2 now.
 
 2010-03-09
 	* rename codedByTwo to nCodedByTwo.
